--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 # pytest.ini
 [pytest]
-DJANGO_SETTINGS_MODULE = myproject.settings  # ganti jika nama project settings berbeda
+DJANGO_SETTINGS_MODULE = myproject.settings
 python_files = tests.py test_*.py *_tests.py
